fixed the spacing and letter covering of the cards

--- a/src/components/CardContainer/CardContainer.module.css
+++ b/src/components/CardContainer/CardContainer.module.css
@@ -7,5 +7,5 @@
   align-items: center;
   flex-wrap: wrap;
   z-index: 1; 
-  height: 50vh; /* Set a fixed height */
+  height: 40vh; /* Set a fixed height */
 }
